deploy/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-client
  labels:
    app: echo-client
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v0
      kind:  Mapping
      name:  echojs_mapping
      prefix: /
      service: echo-client
      precedence: 0
#      ---
#      apiVersion: ambassador/v0
#      kind:  Mapping
#      name:  echojs_mapping
#      prefix: /client/
#      service: echo-client
#      ---
#      apiVersion: ambassador/v0
#      kind:  Mapping
#      name:  echojs_mapping
#      prefix: /build/
#      service: echo-client
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: grpcweb
    targetPort: js-client
    protocol: TCP
  selector:
    app: echo-client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-client
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: echo-client
        version: v1
    spec:
      containers:
      - name: echo-client
        image: gcr.io/confab-cloud/echojs:latest
        imagePullPolicy: Always
        ports:
        - name: js-client
          containerPort: 4567
  selector:
    matchLabels:
      app: echo-client
