deploy/envoy_filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: echo
spec:
  filters:
  - listenerMatch:
      listenerType: ANY
      listenerProtocol: ALL
      portNamePrefix: grpcweb
    filterName: grpcweb
    filterType: HTTP
    filterConfig:
      codec_type: auto
      stat_prefix: ingress_http
      route_config:
        name: local_route
        virtual_hosts:
        - name: local_service
          domains: ["*"]
          routes:
          - match: { prefix: "/echo/EchoService.EchoService/Echo" }
            route: { cluster: istio-cluster }
          cors:
            allow_origin:
            - "*"
            allow_methods: GET, PUT, DELETE, POST, OPTIONS
            allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web
            max_age: "1728000"
            expose_headers: custom-header-1,grpc-status,grpc-message
            enabled: true
      http_filters:
      - name: envoy.grpcweb
      - name: envoy.cors
      - name: envoy.router
